--- a/.github/workflows/produce_graphics.yml
+++ b/.github/workflows/produce_graphics.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Convert notebook to script and run
         run: |
           sudo apt install -y pip jupyter
-          pip install -r requirement.txt
+          pip install -r requirements.txt
           jupyter nbconvert 2021-now-graph-per-cause-area.ipynb --to script
           python 2021-now-graph-per-cause-area.py
 
