--- a/.github/workflows/produce_graphics.yml
+++ b/.github/workflows/produce_graphics.yml
@@ -24,6 +24,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Convert notebook to script and run
         run: |
+          mkdir -p pngs
           sudo apt install -y pip jupyter
           pip install -r requirements.txt
           jupyter nbconvert 2021-now-graph-per-cause-area.ipynb --to script
