--- a/.github/workflows/produce_graphics.yml
+++ b/.github/workflows/produce_graphics.yml
@@ -22,20 +22,26 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Convert notebook to script and run
+      - name: Setup environment
         run: |
-          mkdir -p pngs
           sudo apt install -y pip jupyter
           pip install -r requirements.txt
-          jupyter nbconvert 2021-now-graph-per-cause-area.ipynb --to script
-          python 2021-now-graph-per-cause-area.py
 
-      - name: Commit files
+      - name: Produce graphs
+        run: |
+          mkdir -p pngs
+          shopt -s nullglob
+          for i in *; do
+            jupyter nbconvert ${i} --to script --output ${i}.py
+            python ${i}.py
+          done
+
+      - name: Commit graphs
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add pngs
-          git commit -m "Add changes"
+          git commit -m "Upload graphs"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
