Change nbconvert to hopefully correct form

--- a/.github/workflows/produce_graphics.yml
+++ b/.github/workflows/produce_graphics.yml
@@ -32,7 +32,7 @@ jobs:
           mkdir -p pngs
           shopt -s nullglob
           for i in *; do
-            jupyter nbconvert ${i} --to script --output ${i}.py
+            jupyter nbconvert ${i} --to script --output ${i}
             python ${i}.py
           done
 
