--- a/.github/workflows/produce_graphics.yml
+++ b/.github/workflows/produce_graphics.yml
@@ -41,7 +41,8 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add pngs
-          git commit -m "Upload graphs"
+          git commit -m "Upload graphs" || echo "No changed pngs to commit"
+
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
