--- a/.github/workflows/produce_graphics.yml
+++ b/.github/workflows/produce_graphics.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Produce_graphics
+name: Produce graphics
 
 # Controls when the workflow will run
 on:
